created history section

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
                         <p class="text-xl font-semibold">Donate Bangladesh</p>
                     </div>
                     <div class="navbar-end">
-                        <p class=" text-xl font-semibold secondary-text"><span id="available-balance" >5500</span> BDT</p>
+                        <p class=" text-xl font-semibold secondary-text"><span id="available-balance" ></span> </p>
                     </div>
                 </div>
             </nav>
