--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                 </div>
             </section>
         </section>
+        <!-- History Section -->
         <section id="history-section" class="hidden bg-slate-400">
               <h1 class="text-2xl">Welcome To history</h1>
         </section>
