--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <p class="text-xl font-semibold">Donate Bangladesh</p>
                     </div>
                     <div class="navbar-end">
-                        <p class=" text-xl font-semibold secondary-text"><span id="available-balance" >5500</span> BDT</p>
+                        <img src="./assets/coin.png"> <p class=" text-xl font-semibold secondary-text"><span id="available-balance" > 5500</span> BDT</p>
                     </div>
                 </div>
             </nav>
