--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
             <nav class="">
                 <div class="navbar mt-0 md:px-8 backdrop-blur-3xl rounded-lg">
                     <div class="navbar-start">
-                        <a id="blog" class="btn border-none bg-lime-400  hover:bg-lime-500 text-xl font-semibold">Blog</a>
+                        <a id="blog"
+                            class="btn border-none bg-lime-400  hover:bg-lime-500 text-xl font-semibold">Blog</a>
                     </div>
                     <div class="navbar-center gap-x-4 hidden md:flex">
                         <img src="./assets/logo.png" alt="">
                         <p class="text-xl font-semibold">Donate Bangladesh</p>
                     </div>
                     <div class="navbar-end">
-                        <img src="./assets/coin.png"> <p class=" text-xl font-semibold secondary-text"><span id="available-balance" > 5500</span> BDT</p>
+                        <img src="./assets/coin.png">
+                        <p class="text-xl font-semibold secondary-text"><span id="available-balance"> 5500</span> BDT
+                        </p>
                     </div>
                 </div>
             </nav>
-
-            <div class="flex justify-center items-center gap-x-4 gap-y-8 md:hidden">
-                <img src="./assets/logo.png" alt="logo">
-                <p class="text-xl font-semibold">Donate Bangladesh</p>
-            </div>
         </div>
         <div class="mt-4 md:mt-8">
-            <div class="container mx-auto flex justify-center items-center gap-4 md:gap-6"></section>
+            <div class="container mx-auto flex justify-center items-center gap-4 md:gap-6">
+                </section>
                 <button id="donate"
-                    class="btn border-none bg-lime-400  hover:bg-lime-500 btn-xs sm:btn-sm md:btn-md lg:btn-lg px-4 py-2 md:px-12">Donate</button>
-                <button id="history" class="btn border-none btn-xs sm:btn-sm md:btn-md lg:btn-lg px-4 md:px-12">History</button>
+                    class="btn border-none bg-lime-400  hover:bg-lime-500 sm:btn-xl md:btn-lg lg:btn-lg px-4 py-2 md:px-12">Donate</button>
+                <button id="history"
+                    class="btn border-none sm:btn-xl md:btn-md lg:btn-lg px-4 md:px-12">History</button>
             </div>
         </div>
     </header>
@@ -59,7 +59,8 @@
         <section id="donate-section">
             <!-- Noakhali Section -->
             <section class="mt-8 md:w-11/12 mx-auto">
-                <div class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xll py-8 gap-x-12 shadow-xl">
+                <div
+                    class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xll py-8 gap-x-12 shadow-xl">
                     <div>
                         <img src="./assets/noakhali.png" class="rounded-lg shadow-2xl" />
                     </div>
@@ -70,17 +71,22 @@
                         </button>
                         <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
                         <p class="py-6 secondary-text">
-                            The recent floods in Noakhali have caused significant damage to homes  infrastructure. Your donation will help provide essential supplies and  to those affected by this disaster. Every contribution, big or small, makes  difference. Please join us in supporting the relief efforts and making a positive impact on the lives of those in need.
+                            The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
+                            donation will help provide essential supplies and to those affected by this disaster. Every
+                            contribution, big or small, makes difference. Please join us in supporting the relief
+                            efforts and making a positive impact on the lives of those in need.
                         </p>
-                        <input type="text" placeholder="Write donation amount"
-                           id="amount-for-noakhali" class="input input-bordered w-full max-w-xl" /> <br> <br>
-                        <button id="btn-donate-noakhali" class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
+                        <input type="text" placeholder="Write donation amount" id="amount-for-noakhali"
+                            class="input input-bordered w-full max-w-xl" /> <br> <br>
+                        <button id="btn-donate-noakhali"
+                            class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
                     </div>
                 </div>
             </section>
             <!-- Feni Section -->
             <section class="mt-8 md:w-11/12 mx-auto">
-                <div class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xl py-8 gap-x-12 shadow-xl">
+                <div
+                    class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xl py-8 gap-x-12 shadow-xl">
                     <div>
                         <img src="./assets/feni.png" class=" rounded-lg shadow-2xl" />
                     </div>
@@ -91,17 +97,24 @@
                         </button>
                         <p class="text-xl font-bold">Donate for Flood Relief in Feni,Bangladesh</p>
                         <p class="py-6 secondary-text">
-                            The recent floods in Feni have devastated local communities, leading to severe disruption and loss. Your generous donation will help provide immediate aid, including food, clean water, and medical supplies, to those affected by this calamity. Together, we can offer crucial support and help rebuild lives in the aftermath of this disaster. Every contribution counts towards making a real difference. Please consider donating today to assist those in urgent need.
+                            The recent floods in Feni have devastated local communities, leading to severe disruption
+                            and loss. Your generous donation will help provide immediate aid, including food, clean
+                            water, and medical supplies, to those affected by this calamity. Together, we can offer
+                            crucial support and help rebuild lives in the aftermath of this disaster. Every contribution
+                            counts towards making a real difference. Please consider donating today to assist those in
+                            urgent need.
                         </p>
-                        <input type="text" placeholder="Write donation amount"
-                            id="amount-for-feni" class="input input-bordered w-full max-w-xl" /> <br> <br>
-                        <button id="btn-donate-feni" class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
+                        <input type="text" placeholder="Write donation amount" id="amount-for-feni"
+                            class="input input-bordered w-full max-w-xl" /> <br> <br>
+                        <button id="btn-donate-feni"
+                            class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
                     </div>
                 </div>
             </section>
             <!-- Quota Section -->
             <section class="mt-8 w-11/12 mx-auto">
-                <div class="flex flex-col md:flex-row justify-center items-center border-solid rounded-l-xl py-8 gap-x-12 shadow-xl">
+                <div
+                    class="flex flex-col md:flex-row justify-center items-center border-solid rounded-l-xl py-8 gap-x-12 shadow-xl">
                     <div>
                         <img src="./assets/quota-protest.png" class="rounded-lg shadow-2xl" />
                     </div>
@@ -112,18 +125,24 @@
                         </button>
                         <p class="text-xl font-bold">Aid for Injured in the Quota Movement</p>
                         <p class="py-6 secondary-text">
-                            The recent Quota movement has resulted in numerous injuries and significant hardship for many individuals. Your support is crucial in providing medical assistance, rehabilitation, and necessary supplies to those affected. By contributing, you help ensure that injured individuals receive the care and support they need during this challenging time. Every donation plays a vital role in alleviating their suffering and aiding in their recovery. Please consider making a donation to support these brave individuals in their time of need.
+                            The recent Quota movement has resulted in numerous injuries and significant hardship for
+                            many individuals. Your support is crucial in providing medical assistance, rehabilitation,
+                            and necessary supplies to those affected. By contributing, you help ensure that injured
+                            individuals receive the care and support they need during this challenging time. Every
+                            donation plays a vital role in alleviating their suffering and aiding in their recovery.
+                            Please consider making a donation to support these brave individuals in their time of need.
                         </p>
-                        <input type="text" placeholder="Write donation amount"
-                            id="amount-for-student" class="input input-bordered w-full max-w-xl" /> <br> <br>
-                        <button id="btn-donate-students" class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
+                        <input type="text" placeholder="Write donation amount" id="amount-for-student"
+                            class="input input-bordered w-full max-w-xl" /> <br> <br>
+                        <button id="btn-donate-students"
+                            class="btn w-9/12 bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
                     </div>
                 </div>
             </section>
         </section>
         <!-- History Section -->
         <section id="history-section" class="hidden bg-slate-400">
-              <h1 class="text-2xl">Welcome To history</h1>
+            <h1 class="text-2xl">Welcome To history</h1>
         </section>
     </main>
 
