--- a/blog.html
+++ b/blog.html
@@ -24,10 +24,10 @@
 </head>
 
 <body class="lexend">
-    <header class=" md:w-11/12 mx-auto mt-0 p-4 md:p-8 sticky top-0 backdrop-blur-md">
+    <header class=" md:w-full mx-auto mt-0  md:p-8 sticky top-0 backdrop-blur-md">
         <div class="backdrop-blur-md">
             <nav class="">
-                <div class="navbar mt-0 md:px-8 backdrop-blur-3xl rounded-lg">
+                <div class="navbar  bg-yellow-50 mt-0 md:px-8 backdrop-blur-3xl rounded-lg">
                     <div class="navbar-start">
                         <a id="home"
                             class="btn border-none bg-lime-400  hover:bg-lime-500 text-xl font-semibold">Home</a>
