--- a/index.html
+++ b/index.html
@@ -141,8 +141,13 @@
             </section>
         </section>
         <!-- History Section -->
-        <section id="history-section" class="hidden bg-slate-400">
-            <h1 class="text-2xl">Welcome To history</h1>
+        <section id="history-section" class="hidden">
+            <div class="bg-yellow-100 py-4 my-4 md:my-8">
+                <h1 class="text-6xl font-bold text-center ">Donation History</h1>
+            </div>
+            <div id="history-container" class="flex flex-col justify-start gap-6 md:gap-12">
+
+            </div>
         </section>
     </main>
 
