--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         </p>
                         <input type="text" placeholder="Write donation amount" id="amount-for-noakhali"
                             class="input input-bordered w-full max-w-full" /> <br> <br>
-                        <button id="btn-donate-noakhali" onclick="my_modal_1.showModal()"
+                        <button id="btn-donate-noakhali"
                             class="btn w-full bg-lime-400 text-xl font-bold hover:bg-lime-500">Donate Now</button>
 
                     </div>
