--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </section>
         </section>
         <!-- History Section -->
-        <section id="history-section" class="hidden-50">
+        <section id="history-section" class="hidden">
             <div class="bg-yellow-100 py-4 my-4 md:my-8">
                 <h1 class="text-6xl font-bold text-center ">Donation History</h1>
             </div>
