--- a/index.html
+++ b/index.html
@@ -61,15 +61,15 @@
             <section class="mt-8 md:w-11/12 mx-auto">
                 <div
                     class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xll py-8 gap-x-12 shadow-xl">
-                    <div>
+                    <div class="mx-2">
                         <img src="./assets/noakhali.png" class="rounded-lg shadow-2xl" />
                     </div>
-                    <div id="donate-1" class="md:w-6/12  h-full gap-y-8">
+                    <div class="md:w-6/12 h-full mx-4 gap-y-8">
                         <button class="my-4 btn btn-sm">
                             <img src="./assets/coin.png">
                             <p id="raised-for-noakhali">600.00</p>
                         </button>
-                        <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
+                        <p class="text-xl font-bold mx-2">Donate for Flood at Noakhali, Bangladesh</p>
                         <p class="py-6 secondary-text">
                             The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
@@ -88,10 +88,10 @@
             <section class="mt-8 md:w-11/12 mx-auto">
                 <div
                     class="flex flex-col md:flex-row justify-center items-center border-solid rounded-xl py-8 gap-x-12 shadow-xl">
-                    <div>
+                    <div class="mx-2">
                         <img src="./assets/feni.png" class=" rounded-lg shadow-2xl" />
                     </div>
-                    <div class="md:w-6/12  h-full gap-y-8">
+                    <div class="md:w-6/12 h-full mx-4 gap-y-8">
                         <button class="my-4 btn btn-sm">
                             <img src="./assets/coin.png">
                             <p id="raised-for-feni">8055.00</p>
@@ -116,10 +116,10 @@
             <section class="mt-8 w-11/12 mx-auto">
                 <div
                     class="flex flex-col md:flex-row justify-center items-center border-solid rounded-l-xl py-8 gap-x-12 shadow-xl">
-                    <div>
+                    <div class="mx-2">
                         <img src="./assets/quota-protest.png" class="rounded-lg shadow-2xl" />
                     </div>
-                    <div class="md:w-6/12  h-full gap-y-8">
+                    <div class="md:w-6/12 h-full mx-4 gap-y-8">
                         <button class="my-4 btn btn-sm">
                             <img src="./assets/coin.png">
                             <p id="raised-for-students">0.00</p>
