--- a/index.html
+++ b/index.html
@@ -54,7 +54,12 @@
             </div>
         </div>
     </header>
-    <main class="w-11/12 mx-auto my-28">
+    <main class="w-11/12 mx-auto md:my-28">
+         <div class="md:hidden  bg-yellow-50 flex flex-col justify-center items-center gap-2 py-4">
+            <img src="./assets/logo.png" alt="logo">
+            <h1 class="text-2xl font-semibold">Donate Bangladesh</h1>
+         </div>
+
         <!-- Donate For Section -->
         <section id="donate-section">
             <!-- Noakhali Section -->
