fixed footer mt

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </section>
     </main>
 
-    <footer class="footer footer-center bg-yellow-50 text-base-content p-4">
+    <footer class="mt-8 md:mt-12 footer footer-center bg-yellow-50 text-base-content p-4">
         <aside class="my-10">
           <p>Copyright © - All right reserved by Donate Bangladesh</p>
         </aside>
