--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <img src="./assets/coin.png">
                             <p id="raised-for-noakhali">600.00</p>
                         </button>
-                        <p class="text-xl font-bold mx-2">Donate for Flood at Noakhali, Bangladesh</p>
+                        <p class="text-xl font-bold">Donate for Flood at Noakhali, Bangladesh</p>
                         <p class="py-6 secondary-text">
                             The recent floods in Noakhali have caused significant damage to homes infrastructure. Your
                             donation will help provide essential supplies and to those affected by this disaster. Every
