Added Title for Small Devices

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <main class="w-11/12 mx-auto md:my-28">
-         <div class="md:hidden  bg-yellow-50 flex flex-col justify-center items-center gap-2 py-4">
+         <div class="md:hidden  bg-yellow-50 flex flex-col justify-center items-center gap-2 py-4 rounded-xl">
             <img src="./assets/logo.png" alt="logo">
             <h1 class="text-2xl font-semibold">Donate Bangladesh</h1>
          </div>
