--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         </section>
         <!-- History Section -->
         <section id="history-section" class="hidden">
-            <div class="bg-yellow-100 py-4 my-4 md:my-8">
+            <div class="bg-yellow-100 py-4 my-4 md:my-8 rounded-3xl">
                 <h1 class="text-6xl font-bold text-center ">Donation History</h1>
             </div>
             <div id="history-container" class="flex flex-col justify-start gap-6 md:gap-12">
