--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header class=" md:w-full mx-auto mt-0 p-4 md:p-8 sticky top-0 backdrop-blur-md">
         <div class="backdrop-blur-md">
             <nav class="">
-                <div class="navbar bg-yellow-50 mt-0 md:px-8 backdrop-blur-3xl rounded-lg">
+                <div class="navbar bg-yellow-100 bg-opacity-40 mt-0 md:px-8 backdrop-blur-3xl rounded-lg">
                     <div class="navbar-start">
                         <a id="blog"
                             class="btn border-none bg-lime-400  hover:bg-lime-500 text-xl font-semibold">Blog</a>
