--- a/index.html
+++ b/index.html
@@ -146,6 +146,22 @@
                 </div>
             </section>
         </section>
+
+        <!-- Modal -->
+                 <!--Successfull-Modal  -->
+        <dialog id="my_modal_1" class="modal">
+            <div class="modal-box text-center flex flex-col justify-center items-center">
+              <h3 class="text-3xl font-extrabold mb-8">Congrats!</h3>
+              <img class="h-16" src="./assets/coin.png">
+              <p class="py-4 text-lg">You Have Donated For Humankind<br><span class="text-2xl font-bold">Successfully</span></p>
+              <div class="modal-action">
+                <form method="dialog">
+                  <button class="btn">Close Confirmation</button>
+                </form>
+              </div>
+            </div>
+          </dialog>    
+          
         <!-- History Section -->
         <section id="history-section" class="hidden">
             <div class="bg-yellow-100 py-4 my-4 md:my-8 rounded-3xl">
